<resources>
    <string name="app_name">Weather application</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="unit_celsius">Celsius</string>
    <string name="unit_fahrenheit">Fahrenheit</string>
    <string name="unit_kelvin">Kelvin</string>
    <string name="units_format">Units format:</string>
    <string name="btn_save">Save changes</string>
    <string name="city_name">City name (in eng)</string>
    <string name="lang">Select language (beta version)</string>
    <string name="en">en</string>
    <string name="ru">ru</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="toast_lang">Type your city </string>
    <string name="toast_wait">Please wait</string>
    <string name="DB">Data base:</string>
    <string name="btnClear">Clear</string>
    <string name="toast_l">Click search</string>
    <string name="toast_done">Complete</string>
</resources>
