<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sah.myweather.SettingsActivity">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/btnRead"
                style="@style/TextColor.TextSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DB" />

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/lay_marg"
                android:background="@drawable/round"
                android:text="@string/btnClear" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="@dimen/lay_mar"
            android:background="@drawable/grad1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lay_mar"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/cityName"
                android:layout_width="220dp"
                android:layout_height="70dp"
                android:hint="@string/city_name"
                android:inputType="textCapWords" />

            <ImageButton
            android:layout_marginLeft="30dp"
            android:id="@+id/ib_search"
            android:src="@drawable/search"
            android:layout_width="70dp"
            android:layout_height="70dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/units_format"
                android:textColor="#000000"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/rg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rb_kel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit_kelvin"
                    android:textSize="@dimen/textSize" />

                <RadioButton
                    android:id="@+id/rb_cel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit_celsius"
                    android:textSize="@dimen/textSize" />

                <RadioButton
                    android:id="@+id/rb_far"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit_fahrenheit"
                    android:textSize="@dimen/textSize" />

            </RadioGroup>

        </LinearLayout>
        <TextView
            android:layout_marginTop="@dimen/lay_mar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/lang"
            android:textColor="#000000"
            android:textSize="18sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/ib_ru"
                android:layout_marginLeft="@dimen/lay_marg"
                android:src="@drawable/rus"
                android:layout_width="@dimen/lay_marg"
                android:layout_height="@dimen/lay_marg" />
            <ImageButton
                android:id="@+id/ib_en"
                android:layout_marginLeft="@dimen/lay_marg"
                android:src="@drawable/en"
                android:layout_width="@dimen/lay_marg"
                android:layout_height="@dimen/lay_marg" />


        </LinearLayout>
    </LinearLayout>
</ScrollView>
    <!--<Button-->
        <!--android:id="@+id/btnAdd"-->
        <!--style="@style/TextColor"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:background="@drawable/round"-->
        <!--android:text="@string/btn_save" />-->

</RelativeLayout>
